--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,12 +1,12 @@
-/**
- * Theme Name:  Hybrid Base
- * Theme URI:   http://themehybrid.com/themes/hybrid-base
- * Description: A starter theme from Theme Hybrid. Please fork this.
+/*!
+ * Theme Name:  Hybrid Sample
+ * Theme URI:   http://seothemes.net/themes/hybrid-sample
+ * Description: A sample theme based on the Hybrid Framework.
  * Version:     1.0.0
- * Author:      Justin Tadlock
- * Author URI:  http://justintadlock.com
+ * Author:      SEO Themes
+ * Author URI:  http://seothemes.net
  * Tags:        one-column, two-columns, custom-background, custom-header, custom-menu, featured-images, left-sidebar, post-formats, responsive-layout, right-sidebar, rtl-language-support, threaded-comments, translation-ready
- * Text Domain: hybrid-base
+ * Text Domain: hybrid-sample
  * License:     GNU General Public License v2.0 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
@@ -25,4 +25,5 @@
 @import "comments";
 @import "footer";
 @import "helpers";
+@import "plugins";
 @import "print";
