--- a/assets/styles/_reset.scss
+++ b/assets/styles/_reset.scss
@@ -1,4 +1,4 @@
-/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
+/* normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -143,7 +143,7 @@ strong {
 
 b,
 strong {
-  font-weight: bolder;
+  font-weight: $bolder;
 }
 
 /**
@@ -254,7 +254,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif; /* 1 */
+  font-family: $font-family; /* 1 */
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
