--- a/assets/styles/_utilities.scss
+++ b/assets/styles/_utilities.scss
@@ -2,61 +2,50 @@
  * Utilities
  * --------------------------------------------------------------------------- */
 
-/* ====== FUNCTIONS ====== */
-
-@function black( $opacity ) {
-    @return rgba(0, 10, 20, $opacity );
-}
-
-@function white( $opacity ) {
-    @return rgba( 255, 255, 255, $opacity );
-}
-
 /* ====== VARIABLES ====== */
 
 /* === Breakpoints === */
 
 $breakpoints: (
-	xs: 568px,
+	xs: 640px,
 	sm: 768px,
-	md: 1023px,
-	lg: 1158px,
-	xl: 1340px
+	md: 896px,
+	lg: 1024px,
+	xl: 1152px
 );
 
 /* === Colors === */
 
 $color-light:   #f5f5f5;
 $color-dark:    #2c2d33;
-$color-accent:  #2c2d33;
+$color-accent:  #a9abb5;
 $color-heading: #43454b;
-$color-body:    #55575d;
+$color-body:    #333333;
 $color-link:    #2c2d33;
 $color-white:   #ffffff;
 $color-success: #2ecc71;
 $color-error:   #f54d56;
 $color-info:    #3498db;
 $color-grey:	#a9abb5;
-$color-border:  black(0.1);
+$color-border:  #eeeeee;
+$color-input:   #dddddd;
 
 /* === Typography === */
 
-$font-heading:        'Oswald', Impact, Helvetica, sans-serif;
-$font-body:           'Hind', Helvetica, Arial, sans-serif;
-$font-display:		  'Playfair Display', 'Times New Roman', sans-serif;
-$font-link:			  'Poppins', Helvetica, Arial, sans-serif;
-$font-size-heading:   20px;
-$font-size-body:      16px;
-$font-weight-normal:  400;
-$font-weight-bolder:  500;
-$font-weight-bold:    600;
-$line-height-heading: 1.382;
-$line-height-body:    1.618;
+$font-family: 'Source Sans Pro', Helvetica, sans-serif;
+$normal:      400;
+$bolder:      600;
+$bold:        700;
 
-/* === Other === */
+/* === Structure === */
 
-$border-radius:       1px;
-$border:			  1px solid $color-border;
+$site-padding:	  2rem;
+$site-margin:	  2rem;
+$site-border:	  1px solid $color-border;
+$site-content:    calc(75% - (#{$site-padding}+#{$site-margin}));
+$site-sidebar:    25%;
+$site-radius:     0.1rem;
+$site-transition: all .2s ease;
 
 /* ====== MIXINS ====== */
 
@@ -90,7 +79,7 @@ $border:			  1px solid $color-border;
 
 	&:before,
 	&:after {
-		display: block;
+		display: table;
 		content: '';
 	}
 
@@ -106,4 +95,33 @@ $border:			  1px solid $color-border;
 	-moz-transition: all .3s ease;
 	-o-transition: all .3s ease;
 	transition: all .3s ease;
+}
+
+/* ====== FUNCTIONS ====== */
+
+/* === Modular size === */
+
+// Calculate vw size and set max-width.
+@mixin scale($properties...) {
+    @each $property in $properties {
+        @if (str-index($property, "padding")) {
+            #{$property}: 3rem;
+        } @else {
+            #{$property}: 2rem;
+        }
+    }
+    // Prevent $value from getting too big
+    @media (min-width: #{map-get($breakpoints, xs)}) {
+        @each $property in $properties {
+            #{$property}: 4rem;
+        }
+    }
+    // Prevent $value from getting too big
+    @media (min-width: #{map-get($breakpoints, sm)}) {
+        @each $property in $properties {
+            @if (str-index($property, "padding")) {
+                #{$property}: 6rem;
+            }
+        }
+    }
 }
